[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mineru_vl_utils"
version = "0.1.0"
description = "Utilities for Mineru Vision-Language models"
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
  "httpx",
  "pillow",
  "pydantic",
]

[project.optional-dependencies]
transformers = [
  # fmt: off
  "torch>=2.6.0,<2.8.0",
  "transformers>=4.51.1,<5.0.0",
  "accelerate>=1.5.1",
]
vllm = [
  "vllm==0.10.1.1",
]

# [project.scripts]
# ddp-cli = "ddp.cli.entry:main"

[tool.black]
line-length = 128

[tool.ruff]
line-length = 128
